--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "7              x-wing    123"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\wasadmin\\AppData\\Local\\Temp\\2\\ipykernel_12056\\490835649.py:5: FutureWarning: \n",
+      "C:\\Users\\wasadmin\\AppData\\Local\\Temp\\2\\ipykernel_11132\\490835649.py:5: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -238,10 +238,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             timestamp  unit_id    unit_type empire_or_resistance  location_x  \\\n",
+      "0  2025-07-08 14:42:20        1        at-st           resistance           2   \n",
+      "1  2025-07-08 14:42:19        2  tie_fighter               empire           8   \n",
+      "2  2025-07-08 14:42:18        3       x-wing           resistance          10   \n",
+      "3  2025-07-08 14:42:17        4       x-wing               empire           6   \n",
+      "4  2025-07-08 14:42:16        5       x-wing               empire           1   \n",
+      "\n",
+      "   location_y  destination_x  destination_y     homeworld  is_resistance  \n",
+      "0           5              3              8        Ryloth           True  \n",
+      "1           3              5              6  Concord Dawn          False  \n",
+      "2           7              6              3         Skako           True  \n",
+      "3          10              9              6    Muunilinst          False  \n",
+      "4           3              7              1    Bestine IV          False  \n"
+     ]
+    }
+   ],
+   "source": [
+    "data['is_resistance'] = data['empire_or_resistance'] == 'resistance'\n",
+    "print(data.head())"
+   ]
   }
  ],
  "metadata": {
