Added graph and tree classifier model

--- a/model.ipynb
+++ b/model.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Descion Tree that predicts if a character is joining eithe rthe empire or the resistance \n",
+    "# based on their homeworld and unit type\n",
+    "\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "features = ['unit_type', 'homeworld']\n",
+    "x, y = data[features], data['empire_or_resistance']\n",
+    "\n",
+    "# Encode categorical features\n",
+    "x_encoded = pd.get_dummies(x)\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=.3, random_state=42)\n",
+    "\n",
+    "dtc = DecisionTreeClassifier(random_state=42)"
+   ]
   }
  ],
  "metadata": {
