--- a/model.ipynb
+++ b/model.ipynb
@@ -238,9 +238,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['empire', 'resistance', 'resistance', 'empire', 'empire', 'empire',\n",
+       "       'empire', 'resistance', 'resistance', 'empire', 'resistance',\n",
+       "       'empire', 'empire', 'empire', 'resistance', 'resistance',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance', 'empire',\n",
+       "       'empire', 'empire', 'empire', 'empire', 'empire', 'resistance',\n",
+       "       'empire', 'resistance', 'resistance', 'empire', 'empire', 'empire',\n",
+       "       'resistance', 'empire', 'resistance', 'resistance', 'resistance',\n",
+       "       'resistance', 'resistance', 'empire', 'empire', 'empire',\n",
+       "       'resistance', 'empire', 'empire', 'resistance', 'empire',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance', 'empire',\n",
+       "       'empire', 'empire', 'empire', 'resistance', 'empire', 'resistance',\n",
+       "       'empire', 'empire', 'resistance', 'resistance', 'resistance',\n",
+       "       'resistance', 'resistance', 'empire', 'resistance', 'empire',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance',\n",
+       "       'resistance', 'empire', 'empire', 'resistance', 'resistance',\n",
+       "       'empire', 'empire', 'empire', 'empire', 'empire', 'resistance',\n",
+       "       'empire', 'empire', 'resistance', 'empire', 'empire', 'resistance',\n",
+       "       'resistance', 'resistance', 'resistance', 'empire', 'resistance',\n",
+       "       'empire', 'resistance', 'resistance', 'empire', 'resistance',\n",
+       "       'resistance', 'empire', 'resistance', 'resistance', 'empire',\n",
+       "       'resistance', 'empire', 'empire', 'resistance', 'empire', 'empire',\n",
+       "       'resistance', 'empire', 'resistance', 'empire', 'empire',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance', 'empire',\n",
+       "       'resistance', 'empire', 'empire', 'empire', 'empire', 'empire',\n",
+       "       'resistance', 'empire', 'resistance', 'empire', 'resistance',\n",
+       "       'empire', 'empire', 'empire', 'empire', 'empire', 'resistance',\n",
+       "       'empire', 'empire', 'resistance', 'empire', 'empire', 'resistance',\n",
+       "       'resistance', 'resistance', 'resistance', 'empire', 'empire',\n",
+       "       'empire', 'resistance', 'empire', 'empire', 'empire', 'resistance',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance',\n",
+       "       'resistance', 'resistance', 'empire', 'resistance', 'resistance',\n",
+       "       'empire', 'empire', 'empire', 'empire', 'empire', 'empire',\n",
+       "       'empire', 'resistance', 'empire', 'empire', 'empire', 'resistance',\n",
+       "       'empire', 'resistance', 'empire', 'empire', 'empire', 'empire',\n",
+       "       'empire', 'empire', 'empire', 'empire', 'empire', 'resistance',\n",
+       "       'empire', 'empire', 'empire', 'resistance', 'empire', 'empire',\n",
+       "       'resistance', 'resistance', 'empire', 'resistance', 'empire',\n",
+       "       'resistance', 'empire', 'resistance', 'empire', 'empire',\n",
+       "       'resistance', 'empire', 'empire', 'resistance', 'resistance',\n",
+       "       'resistance', 'resistance', 'resistance', 'empire', 'empire',\n",
+       "       'empire', 'resistance', 'resistance', 'resistance', 'resistance',\n",
+       "       'empire', 'empire', 'empire', 'empire', 'resistance', 'resistance',\n",
+       "       'empire', 'resistance', 'resistance', 'empire', 'empire',\n",
+       "       'resistance', 'empire', 'resistance', 'resistance', 'resistance',\n",
+       "       'resistance', 'empire', 'empire', 'empire', 'empire', 'empire',\n",
+       "       'resistance', 'empire', 'empire', 'resistance', 'empire',\n",
+       "       'resistance', 'resistance', 'empire', 'resistance', 'resistance',\n",
+       "       'empire', 'empire', 'resistance', 'empire', 'resistance', 'empire',\n",
+       "       'resistance', 'resistance', 'empire', 'resistance', 'resistance',\n",
+       "       'empire', 'resistance', 'empire', 'empire', 'empire', 'empire',\n",
+       "       'empire', 'empire', 'empire', 'resistance', 'resistance',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance', 'empire',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance',\n",
+       "       'resistance', 'empire', 'empire', 'empire', 'empire', 'empire',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance',\n",
+       "       'resistance', 'resistance', 'resistance', 'resistance', 'empire',\n",
+       "       'resistance', 'empire', 'resistance'], dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Descion Tree that predicts if a character is joining eithe rthe empire or the resistance \n",
     "# based on their homeworld and unit type\n",
@@ -251,12 +318,23 @@
     "x, y = data[features], data['empire_or_resistance']\n",
     "\n",
     "# Encode categorical features\n",
-    "x_encoded = pd.get_dummies(x)\n",
+    "x_encoded = pd.get_dummies(x, columns = ['unit_type', 'homeworld'])\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=.3, random_state=42)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x_encoded, y, test_size=.3, random_state=42)\n",
     "\n",
-    "dtc = DecisionTreeClassifier(random_state=42)"
+    "dtc = DecisionTreeClassifier(random_state=42)\n",
+    "dtc.fit(x_train, y_train)\n",
+    "\n",
+    "y_pred = dtc.predict(x_test)\n",
+    "y_pred\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
