final part of part 3

--- a/model_2.ipynb
+++ b/model_2.ipynb
@@ -897,6 +897,17 @@
     "df.ffill()\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0acf59bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the DataFrame to a Parquet file\n",
+    "df.to_parquet('troop_movements_1m.parquet', engine='pyarrow')"
+   ]
   }
  ],
  "metadata": {
